--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 16px; /* Gives more room for the background color */
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 16px; /* Separates list items in a flexbox */
+  margin: 0;
+  padding: 0;
 }
 
 a {
