--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,31 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  
+  padding: 8px;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+}
+
+.left-side {
+  display: flex;
+  justify-content: center;
+  margin: 8px;
+
+  align-items: center;
+}
+
+.right-side {
+  display: flex;
+  margin: 8px;
+  gap: 16px;
+
+  align-items: center;
+}
