--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,61 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+body,
+.header,
+.left-links,
+.right-links,
+.content,
+.footer {
+  display: flex;
+}
+
+body {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header,
+.footer {
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  align-self: stretch;
+}
+
+.content {
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 650px;
+}
+
+img {
+  display: block;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+.left-links,
+.right-links {
+  gap: 16px;
+  padding: 8px 16px;
+}
+
+button {
+  padding: 8px 12px;
+  margin: 4px;
+}
